--- a/superset-frontend/src/assets/stylesheets/less/variables.less
+++ b/superset-frontend/src/assets/stylesheets/less/variables.less
@@ -24,21 +24,21 @@
 /* component styles. This will allow us to more easily adjust theming   */
 /************************************************************************/
 
-@primary-color: #20a7c9;
+@primary-color:#30baba;
 @indicator-color: @primary-color;
 
-@brand-primary-dark1: #1a85a0;
-@brand-primary-dark2: #156378;
-@brand-primary-light1: #79cade;
-@brand-primary-light2: #a5dae9;
-@brand-primary-light3: #d2edf4;
-@brand-primary-light4: #e9f6f9;
-@brand-primary-light5: #f3f8fa;
+@brand-primary-dark1: #3fb0ac;
+@brand-primary-dark2: #39a9a5;
+@brand-primary-light1: #9fd8d6;
+@brand-primary-light2: #a5e9e0;
+@brand-primary-light3: #9fd8d6;
+@brand-primary-light4: #9fd8d6;
+@brand-primary-light5: #9fd8d6;
 
-@brand-secondary: #444e7c;
-@brand-secondary-dark1: #363e63;
-@brand-secondary-dark2: #282e4a;
-@brand-secondary-dark3: #1b1f31;
+@brand-secondary: #3fb0ac;
+@brand-secondary-dark1: #39a9a5;
+@brand-secondary-dark2: #39a9a5;
+@brand-secondary-dark3: #3fb0ac;
 @brand-secondary-light1: #8e94b0;
 @brand-secondary-light2: #b4b8ca;
 @brand-secondary-light3: #d9dbe4;
@@ -57,7 +57,7 @@
 @darkest: #000000;
 
 /**************************** text-specific *****************************/
-@link: #1985a0;
+@link: #299792;
 @link-hover: darken(@link, @colorstop-one);
 
 /***************************** status colors ****************************/
